[package]
name = "asexp"
version = "0.1.2"
authors = ["Michael Neumann <mneumann@ntecs.de>"]

license = "MIT"
repository = "https://github.com/mneumann/asexp-rs"
description = "Advanced S-expression-like format suitable for configuration and serialization"
keywords = ["sexp", "file-format", "serialization", "configuration"]

[dev-dependencies]

grabinput = "^0.1"
