[package]
name = "asexp"
version = "0.3.1"
authors = ["Michael Neumann <mneumann@ntecs.de>"]

license = "MIT"
repository = "https://github.com/mneumann/asexp-rs"
description = "Advanced S-expression-like format suitable for configuration and serialization"
keywords = ["sexp", "file-format", "serialization", "configuration"]

include = ["src/**/*.rs", "examples/*.rs", "tests/*", "Cargo.toml", "README.md", "LICENSE"]

[dev-dependencies]

grabinput = "^0.1"
