[package]
name = "asexp"
version = "0.3.2"
authors = ["Michael Neumann <mneumann@ntecs.de>"]

edition = "2018"
license = "MIT"
repository = "https://github.com/mneumann/asexp-rs"
description = "Advanced S-expression-like format suitable for configuration and serialization"
keywords = ["sexp", "file-format", "serialization", "configuration"]

include = ["src/**/*.rs", "examples/*.rs", "tests/*.rs", "tests/*.as", "Cargo.toml", "README.md", "LICENSE"]

[dev-dependencies]

grabinput = "^0.1"
